--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "fomvasss/youtube": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "syrian-open-source/laravel-youtube-iframe-generator": "^1.1",
         "yajra/laravel-datatables-oracle": "*"
     },
     "require-dev": {
